--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "stb"]
 	path = stb
 	url = https://github.com/nothings/stb.git
+[submodule "pocketmod"]
+	path = pocketmod
+	url = https://github.com/rombankzero/pocketmod.git
